# Selenium_Scraper

./: pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yaml
