[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
keywords = ["selenium", "scraper", "webscraper", "web", "scraper"]
authors = [
    {name = "Sabari Rajan", email = "iamsabarirajan@gmail.com"}
]
description = "Selenium Scraper"
readme = "README.md"
license = {file = "LICENSE"}
requires_-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver_manager"
]